package entity;

public interface Ingredient {
    String getName();
}
