package entity;

public interface Inventory {
}
